# internship

./: README.md  config.py  create_user.py  populate_db.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/admin/: routes.py
app/auth/: routes.py
app/intern/: routes.py
app/main/: routes.py
app/mentor/: material.py  routes.py
app/static/css/: DavaSans.css  custom.css  styles.css
app/static/uploads/: Introduction_to_Linux.pptx  Introductoin_To_DevOps.pptx  Linux_-_Advance_commands.pptx
app/templates/: base.html  create_course.html  dashboard.html  login.html  pass_quiz.html  register.html
app/templates/admin/: courses.html  users.html
app/templates/dashboards/: admin_dashboard.html  intern_dashboard.html  mentor_dashboard.html
app/templates/intern/: course_detail.html  courses.html  quiz.html  quiz_result.html
app/templates/mentor/: build_quiz.html  courses.html  create_course.html  dashboard.html  material_form.html  upload_presentation.html
app/utils/: converter.py
