[tool.poetry]
name = "internship"
version = "0.1.0"
description = "Endava Internship Portal"
authors = ["Igor Bannicov <igor.bannicov@endava.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
